--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -26,10 +26,48 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-.w-20 {
+.custom-w-20 {
   -webkit-box-flex: 0;
   box-flex: 0;
   -ms-flex: 0 0 20% !important;
   flex: 0 0 20% !important;
-  max-width: 20%;
+  max-width: calc(20% - 15px);
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
+.custom-space-between {
+  justify-content: space-between;
+}
+
+.d-flex > .custom-column-body {
+  background-color: #e6ffff;
+  padding-bottom: 0;
+
+  .custom-field {
+    background-color: #ccccff;
+    border-radius: 2%;
+    padding: 10px;
+  }
+
+  .navbar-toggler {
+    display: inline-block;
+    span {
+      width: 1em;
+      height: 1em;
+    }
+  }
+  .navbar-toggler:focus {
+    outline: 0;
+  }
+
+  .custom-entry {
+    margin-top: 10px;
+    min-height: 300px;
+  }
+
+  .custom-backlog  {
+    margin-top: 30px;
+    min-height: 100px;
+  }
 }
