add API for [projects], update UI and add new-project modal, minor bugfixes

--- a/app/views/project/index.html.erb
+++ b/app/views/project/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("projects/ProjectsContainer", { greeting: @msg }) %>
+<%= react_component("projects/ProjectsContainer", { projects: @projects }) %>
