--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -66,15 +66,40 @@
     .custom-entry {
       margin-top: 10px;
       min-height: 300px;
+      margin-right: -15px;
+      margin-left: -15px;
+
+      div {
+        display: flex;
+        margin-top: 10px;
+        cursor: text;
+
+        input, span {
+          background-color: #e6ffff;
+          width: 100%;
+          border: 0;
+          outline: 0;
+          display: inline-block;
+          height: fit-content;
+          line-height: 2rem;
+          padding-left: 5px;
+          padding-right: 5px;
+          padding-top: 2px;
+          padding-bottom: 2px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
     }
   
-    .custom-backlog  {
+    .custom-backlog {
       margin-top: 30px;
       min-height: 100px;
     }
   }
   
-  .add-project-btn{
+  .add-project-btn {
     margin: 3rem;
     margin-top: 1rem;
     display: flex;
