--- a/app/views/project/index.html.erb
+++ b/app/views/project/index.html.erb
@@ -1,1 +1,3 @@
-<%= react_component("projects/ProjectsContainer", { projects: @projects }) %>
+<%= react_component("projects/ProjectsContainer", {
+  projects: @projects
+}) %>
