--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,4 +1,6 @@
-$small-width: '700px';
+$small-width: 700px;
+$project-item-bg-color: #C0C0C0;
+$project-containers: #A9A9A9;
 
 .App {
     text-align: center;
@@ -46,6 +48,22 @@ $small-width: '700px';
     width: 85%;
   }
   
+  .project-title {
+    span, input {
+      background-color: unset;
+      width: 70%;
+      border: 0;
+      outline: 0;
+      padding-left: 5px;
+      padding-right: 5px;
+      padding-top: 0;
+      padding-bottom: 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+
   .custom-space-between {
     justify-content: space-between;
   }
@@ -55,7 +73,7 @@ $small-width: '700px';
     padding-bottom: 0;
   
     .custom-field {
-      background-color: #ccccff;
+      background-color: $project-containers;
       border-radius: 2%;
       padding: 10px;
     }
@@ -132,6 +150,10 @@ $small-width: '700px';
     padding-bottom: 20px;
     margin: 1px;
 
+    &.edit-mode {
+      width: calc(60% + 50px);
+    }
+
     .close-popup {
       margin: 4px;
       width: 14px;
@@ -154,12 +176,11 @@ $small-width: '700px';
     }
 
     .link-item-popup {
-      padding-left: 5px;
+      padding: 5px;
       margin-top: 3px;
       display: flex;
       a {
         color: unset;
-        max-width: 60%;
         white-space: nowrap;
         overflow: hidden;
         text-decoration: none;
@@ -167,14 +188,16 @@ $small-width: '700px';
         display: inline-block;
       }
       &:hover {
-        background-color: #ccccff;
+        background-color: $project-containers;
         transition: .3s linear;
       }
     }
 
     .add-links {
+      justify-content: flex-end;
+      display: flex;
       margin-top: 10px;
-      padding-left: 5px;
+      margin-right: 10px;
       cursor: pointer;
     }
 
@@ -184,6 +207,18 @@ $small-width: '700px';
       margin-top: 10px;
       i {
         margin-right: 5px;
+      }
+    }
+  }
+
+  .editable-items {
+    display: flex;
+    justify-content: space-between;
+    .item-edit-actions {
+      display: inherit;
+      &>div {
+        margin-left: 5px;
+        cursor: pointer;
       }
     }
   }
