--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -38,4 +38,10 @@
     height: 20px;
     background-size: 20px;
   }
+  &.icon-draggable {
+    background-image: image_url('draggable.svg');
+    width: 20px;
+    height: 20px;
+    background-size: 20px;
+  }
 }
