remove Posts model, refresh UI

--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -3,45 +3,45 @@
   background-repeat: no-repeat;
 
   &.icon-edit-links {
-    background-image: image_url('edit-notes.svg');
-    width: 20px;
-    height: 20px;
-    background-size: 20px;
+    background-image: image_url('edit.svg');
+    width: 1rem;
+    height: 1rem;
+    background-size: 1rem;
   }
   &.icon-close-popup {
     background-image: image_url('close.svg');
-    width: 14px;
-    height: 14px;
-    background-size: 14px;
+    width: 1rem;
+    height: 1rem;
+    background-size: 1rem;
   }
   &.icon-delete {
     background-image: image_url('delete.svg');
-    width: 14px;
-    height: 14px;
-    background-size: 14px;
+    width: 1rem;
+    height: 1rem;
+    background-size: 1rem;
   }
   &.icon-add-circle {
     background-image: image_url('add-circle.svg');
-    width: 20px;
-    height: 20px;
-    background-size: 20px;
+    width: 1rem;
+    height: 1rem;
+    background-size: 1rem;
   }
   &.icon-edit {
     background-image: image_url('edit.svg');
-    width: 20px;
-    height: 20px;
-    background-size: 20px;
+    width: 1rem;
+    height: 1rem;
+    background-size: 1rem;
   }
   &.icon-close {
     background-image: image_url('close.svg');
-    width: 20px;
-    height: 20px;
-    background-size: 20px;
+    width: 1rem;
+    height: 1rem;
+    background-size: 1rem;
   }
   &.icon-draggable {
     background-image: image_url('draggable.svg');
-    width: 20px;
-    height: 20px;
-    background-size: 20px;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-size: 1.5rem;
   }
 }
