update navbar, change drag&drop behavior for projects, add project reordering modal, misc bugfixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,9 @@
 
   <body>
     <div class="App">
-      <%= render partial: "nav/navbar" %>
       <%= render partial: "modals/modal_container" %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    <%= yield %>
+      <% if alert %><p class="alert"><%= alert %></p><% end %>
+      <%= yield %>
     </div>
   </body>
 </html>
