--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -138,7 +138,11 @@ $gray-line: #aaa;
       }
     }
   
-    .tasks-container {
+    .tasks-container,
+    .custom-backlog {
+      margin-top: 0.75rem;
+      min-height: 300px;
+
       nav.dropdown-menu {
         .dropdown-item {
           padding: 0.5rem 1.0rem;
@@ -154,12 +158,6 @@ $gray-line: #aaa;
           }
         }
       }
-    }
-
-    .tasks-container,
-    .custom-backlog {
-      margin-top: 0.75rem;
-      min-height: 300px;
 
       &.dragging-over {
         border: 1px solid;
@@ -343,6 +341,8 @@ $gray-line: #aaa;
     color: black;
     font-weight: 500;
     margin-right: 1rem;
+    outline: none !important;
+    box-shadow: none !important;
   }
 }
 
@@ -360,7 +360,7 @@ nav {
 }
 
 .reorder-projects-container {
-  margin: 1rem .5rem;
+  margin: 1rem;
   position: relative;
 
   &.dragging-over {
