--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= javascript_pack_tag 'application' %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="256x256">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   </head>
 
   <body>
