--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,29 @@
 
 @import "bootstrap";
 
+body#auth-page {
+  color: #D8D3D3;
+  max-width: 600px;
+  margin: auto;
+
+  a {
+    color: lightblue;
+  }
+  
+  text-align: center;
+  background: #313131;
+  height: 100vh;    
+
+  .navbar {
+    background-color: #364c63;
+  }
+
+  p.alert, p.notice {
+    padding: 0;
+    color: white;
+  }
+}
+
 .modal-backdrop.show {
   opacity: 0.7;
 }
