--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -7,7 +7,8 @@ $gray-line: #aaa;
 .App {
     text-align: center;
     background: #313131;
-    height: 100vh;    
+    min-height: 100vh;
+  
     .navbar {
       background-color: #364c63;
     }
